# slap

./: .drone.yml  .flake8  .gitignore  .gitmodules  .pylintrc  .readthedocs-custom-steps.yml  .readthedocs-requirements.txt  .readthedocs.yml  404.html  LICENSE.txt  MANIFEST.in  Makefile  README.md  action.yml  index.html  mypy.ini  objects.inv  package.yaml  package.yml  pyproject.toml  readme.md  renovate.json  renovate.json5  search.html  setup.py  sitemap.xml
.changelog/: 0.0.33.yml  0.0.34.yml  0.0.35.yml  0.0.36.yml  0.0.37.yml  0.0.38.yml  0.0.39.yml  0.10.0.toml  0.10.0.yml  0.10.1.toml  0.10.1.yml  0.10.2.toml  0.10.2.yml  0.10.3.toml  0.10.3.yml  0.11.0.toml  0.11.0.yml  0.11.1.toml  0.11.1.yml  0.11.2.toml  0.11.2.yml  0.11.3.toml  0.11.3.yml  0.11.4.toml  0.11.4.yml  0.12.0.toml  0.12.0.yml  0.13.0.toml  0.13.0.yml  0.13.1.toml  0.13.1.yml  0.13.2.toml  0.13.2.yml  0.13.3.toml  0.13.3.yml  0.14.0.toml  0.14.0.yml  0.14.1.toml  0.14.1.yml  0.14.2.toml  (+179 more)
.github/workflows/: changelog.yaml  python-package.yml  python.yml  selftest.yaml
api/: index.html
api/documentation/: index.html
api/plugins/: index.html
api/remotes/github/: index.html
changelog/: index.html
commands/add/: index.html
commands/changelog/: index.html
commands/check/: index.html
commands/info/: index.html
commands/init/: index.html
commands/install/: index.html
commands/link/: index.html
commands/log/: index.html
commands/publish/: index.html
commands/release/: index.html
commands/report/: index.html
commands/run/: index.html
commands/test/: index.html
configuration/: index.html
docs/: .gitignore  build.novella  mkdocs.yml  publishing.md  releasing.md  requirements.txt
docs/content/: api.md  changelog.md  configuration.md  getting-started.md  glossary.md  index.md  usage-examples.md
docs/content/api/: documentation.md  plugins.md
docs/content/commands/: add.md  changelog.md  check.md  init.md  install.md  link.md  publish.md  release.md  run.md  test.md  venv.md
docs/content/guides/: automatic-changelog-pull-request-urls.md  github.md  publishing.md
docs/content/plugins/: project-handlers.md
docs/content/remotes/: github.md
docs/docs/: changelog.md  configuration.md  getting-started.md  glossary.md  index.md  package-data.md  publishing-guide.md
docs/docs/api/: documentation.md  plugins.md
docs/docs/commands/: add.md  changelog.md  check.md  info.md  init.md  install.md  release.md  report.md  run.md  test.md  venv.md
docs/docs/guides/: github.md
docs/src/: api.md  configuration.md  plugins.md  publishing-guide.md
docs/src/commands/: check.md  link.md  log.md  release.md  test.md
docs/src/guides/: publishing.md
docs/src/remotes/: github.md
docs/tags/: cleo_describe.py
getting-started/: index.html
glossary/: index.html
guides/automatic-changelog-pull-request-urls/: index.html
guides/github/: index.html
guides/publishing/: index.html
plugins/: index.html
plugins/project-handlers/: index.html
publishing-guide/: index.html
remotes/github/: index.html
search/: search_index.json
slam-cli/: LICENSE  readme.md  setup.cfg
src/clap/: __main__.py  application.py  changelog.py  check.py  configuration.py  plugins.py  project.py  repository.py
src/clap/ext/: version_incrementing_rule.py
src/clap/util/: vcs.py
src/docs/: index.md
src/piz/: __init__.py  __main__.py
src/piz/commands/: __init__.py  license.py
src/piz/util/: text.py
src/pliz/: __main__.py
src/pliz/commands/: base.py  core.py  info.py  license.py  render.py
src/pliz/core/: plugins.py
src/pliz/model/: base.py  monorepo.py  package.py
src/pliz/models/: base.py  monorepo.py  package.py
src/pliz/plugins/: _util.py  coreplugin.py  devinstallscript.py  init.py  setuptools.py
src/pliz/render/: __init__.py  base.py  devinstallscript.py  init.py  setuptools.py  util.py
src/pliz/util/: ast.py  decorators.py  semver.py
src/shore/: __init__.py  __main__.py  mapper.py  model.py  static.py
src/shore/commands/: __init__.py  base.py  core.py  info.py  render.py
src/shore/core/: plugins.py
src/shore/models/: __init__.py  package.py
src/shore/plugins/: _util.py  core.py  coreplugin.py  dev_install.py  devinstallscript.py  init.py  install_script.py  pypi.py  requirements_file.py  setuptools.py
src/shore/tools/: conda_forge.py
src/shore/util/: changelog.py  ci.py  classifiers.py  git.py  license.py  resources.py  version.py
src/shut/: __init__.py  __main__.py  application.py  config.py
src/shut/builders/: __init__.py  core.py  setuptools.py
src/shut/changelog/: __init__.py  changelog.py  changelog_manager.py  config.py  deser.py  github.py  manager.py  model.py  render.py  v1.py  v2.py  v3.py
src/shut/checkers/: __init__.py  base.py  core.py  generic.py  monorepo.py  package.py
src/shut/checks/: __init__.py  basic.py  core.py  monorepo.py  package.py
src/shut/commands/: __init__.py  classifiers.py  conda_forge.py  help.py  init.py  license.py  link.py  test.py
src/shut/config/: global_.py  project.py  remote.py
src/shut/console/: application.py  command.py
src/shut/data/: __init__.py
src/shut/impl/: __init__.py  setuptools.py
src/shut/model/: __init__.py  abstract.py  author.py  changelog.py  checks.py  linter.py  monorepo.py  package.py  publish.py  release.py  requirements.py  target.py  test.py  utils.py  version.py
src/shut/plugins/: application_plugin.py  check_plugin.py  plugin_registry.py  (+2 more)
src/slam/: __init__.py  __main__.py  application.py  changelog.py  configuration.py  plugins.py  project.py  release.py  repository.py
src/slap/: __init__.py  __main__.py  application.py  changelog.py  check.py  configuration.py  dependency.py  plugins.py  project.py  release.py  repository.py
src/slap/templates/poetry/: README.md  pyproject.toml
src/slap/templates/poetry/tests/: test_import.py
src/test/: test_package.py  test_requirements.py  test_test.py  test_utils_text.py  test_version.py
tests/integration/: test_repository_ci_github_actions.py
tests/slap/: test_dependency.py
usage-examples/: index.html
(+271 files in other folders)
